--- a/templates/admin_sql.html
+++ b/templates/admin_sql.html
@@ -9,9 +9,8 @@
     <style>
         #chartContainer {
             width: 800px;
-            overflow-x: auto; /* Enable horizontal scrolling */
+            overflow-x: auto;
         }
-        
         #myChart {
             display: block;
         }
@@ -20,7 +19,7 @@
 
 {% block content %}
 
-{{ block_header(servername)}}
+{{block_header(servername)}}
 <div style="display: flex;">
     <div style="flex: 1; padding: 10px;">
         <div id="savedQueriesList"></div>
@@ -59,7 +58,6 @@
 
 <script>
     var sqlResponse = null;
-    var myChart = null;
 
     function submitQuery() {
         document.getElementById('query_results').innerHTML = '';
@@ -150,42 +148,19 @@
         }
     }
 
-    function renderChart() {
-        const timeColumn = document.getElementById('timeColumn').value;
-        const dataColumn = document.getElementById('dataColumn').value;
-        const granularity = document.getElementById('timeGranularity').value;
-        const queryData = sqlResponse;
+    // Call updateSavedQueriesList to display saved queries on page load
+    updateSavedQueriesList();
+</script>
 
-        // Process the data to fit into the chart
-        // This will depend on the structure of your queryData
-        const processedData = processDataForChart(queryData, timeColumn, dataColumn, granularity);
-        
-        const minWidthPerDataPoint = 10; // Minimum width per data point in pixels
-        const extraWidth = 100; // Extra width for axes and borders
-        const totalWidth = minWidthPerDataPoint * processedData.labels.length + extraWidth;
-        
-        // Set the width of the canvas
-        const canvas = document.getElementById('myChart');
-        canvas.style.width = totalWidth + 'px';
-        canvas.style.height = '500px';
-
-        // Destroy the existing chart instance if it exists
-        if (myChart) {
-            myChart.destroy();
-        }
-        
-        // Get the context of the canvas
-        const ctx = canvas.getContext('2d');
-
-        myChart = new Chart(ctx, {
-            type: 'line', // or 'bar', depending on your preference
+<script>
+    let myChart = null;
+    
+    function createChart() {    
+        let newChart = new Chart(document.getElementById('myChart').getContext('2d'), {
+            type: "line",
             data: {
-                labels: processedData.labels,
-                datasets: [{
-                    label: 'Data',
-                    data: processedData.data
-                    // other dataset properties
-                }]
+                labels: [],
+                datasets: []
             },
             options: {
                 responsive: false,
@@ -193,32 +168,64 @@
                 scales: {
                     y: {
                         ticks: {
-                          stepSize: 1
+                            stepSize: 1
                         }
                     },
                     x: {
                         ticks: {
-                            autoSkip: true, // Automatically skip labels to avoid overlap
-                            maxRotation: 45, // Maximum label rotation in degrees
-                            minRotation: 45 // Minimum label rotation in degrees
+                            autoSkip: true,
+                            maxRotation: 45,
+                            minRotation: 45
                         }
                     }
                 }
             }
         });
+        return newChart;
+    }
+
+    function renderChart() {
+        const timeColumn = document.getElementById('timeColumn').value;
+        const dataColumn = document.getElementById('dataColumn').value;
+        const granularity = document.getElementById('timeGranularity').value;
+        const queryData = sqlResponse;
+
+        const processedData = processDataForChart(queryData, timeColumn, dataColumn, granularity);
+        
+        const minWidthPerDataPoint = 10; // Minimum width per data point in pixels
+        const extraWidth = 100; // Extra width for axes and borders
+        const totalWidth = minWidthPerDataPoint * processedData.labels.length + extraWidth;
+        
+        // Set the width of the canvas based on the sql response size
+        const canvas = document.getElementById('myChart');
+        canvas.style.width = totalWidth + 'px';
+        canvas.style.height = '500px';
+        
+        if (myChart) {
+            myChart.destroy();
+        }
+
+        // we have to destroy then create a new chart to adjust to the new canvas size
+        myChart = createChart();
+        
+        myChart.data =  {
+            labels: processedData.labels,
+            datasets: [{
+                label: 'Data',
+                data: processedData.data
+            }]
+        };
+
+        myChart.update();
     }
 
     function processDataForChart(data, timeColumn, dataColumn, granularity) {
-        // Ensure there is data to process
         if (!data || !data.rows || data.rows.length === 0) {
             console.error("No data to process");
             return { labels: [], data: [] };
         }
     
-        // Generate a complete list of time blocks
         const fullTimeBlocks = generateTimeBlocks(data, timeColumn, granularity);
-    
-        // Merge actual query data into the generated time blocks
         const mergedData = mergeDataIntoTimeBlocks(data, fullTimeBlocks, timeColumn, dataColumn);
     
         return {
@@ -226,24 +233,14 @@
             data: mergedData.map(item => item.value)
         };
     }
-    
-    function formatDateAsString(timeValue) {
-        // Format your date as a string here
-        // For example: return timeValue.split('T')[0]; // If your date is in ISO format
-        return timeValue; // Placeholder implementation
-    }
-    
 
     function generateTimeBlocks(data, timeColumn, granularity) {
         if (data.rows.length === 0) {
             return [];
         }
-        console.log(data);
-        // Get the first and last time values from the data
-        const firstTime = new Date(data.rows[0][timeColumn]);
-        const lastTime = new Date(data.rows[data.rows.length - 1][timeColumn]);
-        console.log('time block first and last: ', firstTime, lastTime);
-    
+
+        const firstTime = new Date(data.rows[0][timeColumn] + 'Z');
+        const lastTime = new Date(data.rows[data.rows.length - 1][timeColumn] + 'Z');    
         let timeBlocks = [];
         let currentTime = new Date(firstTime);
     
@@ -270,12 +267,10 @@
                 return `${year}-${month}-${day}`;
             case 'hourly':
                 return `${year}-${month}-${day} ${hour}:00`;
-            // Add cases for minutely and secondly if needed
             default:
-                return `${year}-${month}-${day} ${hour}:00`; // Default to hourly if granularity is not specified
+                return `${year}-${month}-${day} ${hour}:00`; 
         }
     }
-    
     
     function incrementTime(date, granularity) {
         switch (granularity) {
@@ -291,22 +286,13 @@
             case 'hourly':
                 date.setHours(date.getHours() + 1);
                 break;
-            case 'minutely':
-                date.setMinutes(date.getMinutes() + 1);
-                break;
-            case 'secondly':
-                date.setSeconds(date.getSeconds() + 1);
-                break;
         }
     }
     
     function mergeDataIntoTimeBlocks(data, timeBlocks, timeColumn, dataColumn) {
         // Convert data rows into a map for easier lookup
         const dataMap = new Map(data.rows.map(row => [row[timeColumn], row[dataColumn]]));
-    
-        console.log("Time Blocks:", timeBlocks);
-        console.log("Data Map:", dataMap);
-    
+        
         // Merge actual data into the time blocks
         const mergedData = timeBlocks.map(block => {
             const value = dataMap.has(block) ? dataMap.get(block) : 0;
@@ -315,13 +301,9 @@
                 value: value
             };
         });
-    
-        console.log("Merged Data:", mergedData);
+
         return mergedData;
     }
-    
-    // Call updateSavedQueriesList to display saved queries on page load
-    updateSavedQueriesList();
 </script>
 
 {% endblock %}
