--- a/templates/admin_sql.html
+++ b/templates/admin_sql.html
@@ -14,6 +14,24 @@
         #myChart {
             display: block;
         }
+        #query_results{
+            overflow-x: auto;
+            max-height: 800px;
+            overflow-y: auto;
+        }
+        table { 
+            border-collapse: collapse; 
+        } 
+        th, td { 
+            border: 1px solid #a0a0a0; 
+            padding: 2px; 
+            white-space: nowrap; 
+            overflow: hidden; 
+            text-overflow: ellipsis; 
+        } 
+        th { 
+            background-color: #f2f2f2; 
+        } 
     </style>
 {% endblock %}
 
@@ -205,7 +223,7 @@
             myChart.destroy();
         }
 
-        // we have to destroy then create a new chart to adjust to the new canvas size
+        // we have to destroy then create a new chart to adjust to the new canvas size which is based on the sql response data
         myChart = createChart();
         
         myChart.data =  {
