--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     }
     .element-block{
         margin-top: 40px;
-
+        max-width: 80%;
         background-color: white;
         border-radius: 10px;
         padding-left: 20px;
